[package]
name = "brackets"
version = "0.0.0"
description = "Simple library for JSON I/O"
license-file = "LICENSE.txt"
edition = "2021"

[lib]
name = "brackets"

[dependencies]
chrono = { version = "0.4.38", optional = true }
brackets-macros = { path = "../brackets-macros" }

[features]
default = ["chrono"]
chrono = ["dep:chrono"]
